--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,5 @@
 body {
+  background-color: rgb(250, 250, 250);
   margin: 0;
   font-family:
     -apple-system,
@@ -13,7 +14,7 @@ body {
     'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale
 }
 
 code {
@@ -23,5 +24,5 @@ code {
     Monaco,
     Consolas,
     'Courier New',
-    monospace;
+    monospace
 }
