--- a/src/views/Login/LoginView.less
+++ b/src/views/Login/LoginView.less
@@ -1,13 +1,17 @@
+@import '../../style/theme';
+
 .hy-sider {
   .hy-sider-nav {
-    color: #ffffff
+    color: #222;
+    border-bottom: none;
+
+    .hy-sider-nav-item {
+      color: #222;
+      border-bottom: none
+    }
   }
 
   .hy-menu-login {
     height: calc(100% - 64px)
-  }
-
-  .hy-menu-item {
-    color: white
   }
 }
