--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -1,8 +1,8 @@
 @import '~antd/dist/antd.less';
 
 @primary-color: rgb(255, 100, 0);
-@link-color: @primary-color;
-@heading-color: rgba(150, 100, 0, 1);
+@link-color: @primary-color;  // 柠檬权贵专属尊贵气质高瞻远睹尊贵黄
+@heading-color: rgb(96, 40, 30); // 柠檬沉稳大气磅礴至尊棕
 @font-size-base: 16px;
 @text-color: rgba(25, 12, 0,1);
 @layout-header-background: rgb(255, 220, 60);
