feat: update DashboardView
更新Dashboard

--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -5,5 +5,5 @@
 @heading-color: rgb(96, 40, 30); // 柠檬沉稳大气磅礴至尊棕
 @font-size-base: 16px;
 @text-color: rgba(25, 12, 0,1);
-@layout-header-background: rgb(255, 220, 60);
+@layout-header-background: rgb(255, 220, 60);   // tip: 其他地方有可能复制粘贴了该颜色，请统一修改
 @layout-body-background: rgb(245, 245, 245);
