--- a/src/views/Loading/LoadingView.less
+++ b/src/views/Loading/LoadingView.less
@@ -2,9 +2,5 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-
-  > span {
-    font-size: 40px
-  }
+  justify-content: center
 }
