fix: css conflict on different view

--- a/src/views/Dashboard/DashboardView.less
+++ b/src/views/Dashboard/DashboardView.less
@@ -1,7 +1,9 @@
 @import '../../style/theme';
 
-.hy-sider {
-  .top-element {
-    margin: 1rem 0
+.dashboard-view {
+  .hy-sider {
+    .top-element {
+      margin: 1rem 0
+    }
   }
 }
