--- a/src/views/Login/LoginView.less
+++ b/src/views/Login/LoginView.less
@@ -1,32 +1,34 @@
 @import '../../style/theme';
 
-.hy-sider {
-  .hy-sider-nav {
-    color: #222;
-    border-bottom: none;
-
-    .hy-sider-nav-item {
+.login-view {
+  .hy-sider {
+    .hy-sider-nav {
       color: #222;
-      border-bottom: none
-    }
-  }
+      border-bottom: none;
 
-  .hy-menu {
-    height: calc(100% - 64px);
-
-    .login {
-      height: calc(100% - 61.8%)
+      .hy-sider-nav-item {
+        color: #222;
+        border-bottom: none
+      }
     }
 
-    .login-board {
-      height: 61.8%;
+    .hy-menu {
+      height: calc(100% - 64px);
 
-      .away {
-        margin: 0 1rem;
+      .login {
+        height: calc(100% - 61.8%)
+      }
 
-        > * {
-          margin-top: 0.1rem;
-          margin-bottom: 0.1rem
+      .login-board {
+        height: 61.8%;
+
+        .away {
+          margin: 0 1rem;
+
+          > * {
+            margin-top: 0.1rem;
+            margin-bottom: 0.1rem
+          }
         }
       }
     }
