--- a/src/views/Dashboard/Dashboard/index.less
+++ b/src/views/Dashboard/Dashboard/index.less
@@ -1,18 +1,20 @@
-.hy-header {
-  background-color: #fff;
-  border-bottom: 1px solid #ebedf0
-}
-
-.hy-content {
-  .top-element {
-    margin: 0.5rem 0
+.dashboard-view {
+  .hy-header {
+    background-color: #fff;
+    border-bottom: 1px solid #ebedf0
   }
-}
 
-.hy-top-breadcrumb {
-  padding-left: 0.5rem
-}
+  .hy-content {
+    .top-element {
+      margin: 0.5rem 0
+    }
+  }
 
-.hy-card {
-  border-radius: 6px
+  .hy-top-breadcrumb {
+    padding-left: 0.5rem
+  }
+
+  .hy-card {
+    border-radius: 6px
+  }
 }
