feat: update StartView

--- a/src/views/Start/index.less
+++ b/src/views/Start/index.less
@@ -2,7 +2,6 @@
 
 .login-view {
   width: 100%;
-  min-height: 100vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -20,6 +19,13 @@
       line-height: 1.2;
       text-align: center
     }
+  }
+
+  .hello-card {
+    overflow: hidden;
+    padding: 65px 55px 0 55px;
+    background-color: #fff;
+    margin: 3rem 1rem 0 1rem
   }
 
   .ad-card {
