feat: update StartView

--- a/src/views/Start/index.less
+++ b/src/views/Start/index.less
@@ -8,6 +8,14 @@
   align-items: center;
   background-color: @layout-header-background;
 
+  .start-view-nav {
+    background-color: @layout-header-background;
+
+    * {
+      background-color: @layout-header-background
+    }
+  }
+
   .login-card {
     overflow: hidden;
     padding: 65px 55px 54px 55px;
