--- a/src/index.less
+++ b/src/index.less
@@ -30,3 +30,10 @@ code {
 .hy-card {
   border-radius: 6px
 }
+
+// fixme: 不知道为什么显示错了
+.ms-DetailsList {
+  .ms-DetailsHeader {
+    height: 100%
+  }
+}
