--- a/src/components/Reserve/ReserveCalendar/index.less
+++ b/src/components/Reserve/ReserveCalendar/index.less
@@ -4,7 +4,7 @@
   height: 116px;
 
   &:hover {
-    background-color: #333
+    background-color: lighten(@layout-header-background, 20%)
   }
 
   .content {
